--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
+    "graphql": "^15.8.0",
+    "graphql-request": "^6.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
